--- a/webroot/skin/frontend/blueacorn/mis/scss/module/_checkout-onepage.scss
+++ b/webroot/skin/frontend/blueacorn/mis/scss/module/_checkout-onepage.scss
@@ -687,4 +687,10 @@ body:not(.opc-has-progressed-from-login) .opc.opc-firststep-login .section#opc-l
         top:14px;
     }
 }
+@include bp(max-width, $bp-medium){
+    .opc .select-container{
+        width:auto;
+    }
+}
+
 
